===================
astroid's ChangeLog
===================


What's New in astroid 3.4.0?
============================
Release date: TBA



What's New in astroid 3.3.4?
============================
Release date: TBA



What's New in astroid 3.3.3?
============================
Release date: 2024-09-20

* Fix inference regression with property setters.

  Closes pylint-dev/pylint#9811

* Add annotation-only instance attributes to attrs classes to fix `no-member` false positives.

  Closes #2514


What's New in astroid 3.3.2?
============================
Release date: 2024-08-11

* Restore support for soft-deprecated members of the ``typing`` module with python 3.13.

  Refs pylint-dev/pylint#9852


What's New in astroid 3.3.1?
============================
Release date: 2024-08-06

* Fix a crash introduced in 3.3.0 involving invalid format strings.

  Closes #2492


What's New in astroid 3.3.0?
============================
Release date: 2024-08-04

* Add support for Python 3.13.

* Remove support for Python 3.8 (and constants `PY38`, `PY39_PLUS`, and `PYPY_7_3_11_PLUS`).

  Refs #2443

* Add the ``__annotations__`` attribute to the ``ClassDef`` object model.

  Closes pylint-dev/pylint#7126

* Implement inference for JoinedStr and FormattedValue

* Add support for ``ssl.OP_LEGACY_SERVER_CONNECT`` (new in Python 3.12).

  Closes pylint-dev/pylint#9849


What's New in astroid 3.2.4?
============================
Release date: 2024-07-20

* Avoid reporting unary/binary op type errors when inference is ambiguous.

  Closes #2467


What's New in astroid 3.2.3?
============================
Release date: 2024-07-11

* Fix ``AssertionError`` when inferring a property consisting of a partial function.

Closes pylint-dev/pylint#9214


What's New in astroid 3.2.2?
============================
Release date: 2024-05-20

* Improve inference for generic classes using the PEP 695 syntax (Python 3.12).

  Closes pylint-dev/pylint#9406


What's New in astroid 3.2.1?